# reovim

./: Cargo.toml  rustfmt.toml
lib/core/: Cargo.toml
lib/core/src/: lib.rs
lib/core/src/api/: mod.rs
lib/core/src/bind/: mod.rs
lib/core/src/command/: mod.rs
lib/core/src/event/: mod.rs
lib/core/src/key/: mod.rs
lib/core/src/macros/: mod.rs
lib/core/src/modd/: mod.rs
lib/core/src/state/: mod.rs
lib/sys/: Cargo.toml
lib/sys/src/: file.rs  lib.rs  read.rs  terminal.rs
lib/sys/src/terminal/: event.rs  window.rs
lib/sys/src/terminal/event/: key.rs  mouse.rs  reader.rs
main/: Cargo.toml
main/src/: main.rs
