[workspace]
members=[ "lib/*","main/"]
resolver = "2"

[workspace.package]
rust-version = "1.80"
version = "0.1.0"
edition = "2021"
authors = ["ds1sqe(dukim)-dukim@suresofttech.com-ds1sqe@mensakorea.org"]
license = "PRIVATE"

[workspace.package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[workspace.dependencies]
bitflags = "2.6.0"
parking_lot = "0.12.3"
rustix = {version="0.38.42",features = ["std", "stdio", "termios"]}
